Copperplate font added

--- a/index.html
+++ b/index.html
@@ -127,10 +127,116 @@
     </section>
 
     <!-- Projects section -->
+    <section class="projects" id="projects">
+      <h2 class="projects-title">My Recent Projects</h2>
+      <div class="projects-container">
+        <div class="project-container project-card">
+          <img
+            src="assets/images/buzz.png"
+            alt="buzz-app"
+            loading="lazy"
+            class="project-pic"
+          />
+          <h3 class="project-title">The Buzz App</h3>
+          <p class="project-details">
+            A social media application for peers and co-workers: the Buzz! 
+            In this project, I collaborated with a team of 4 developers to design and deploy this mobile application using Heroku. 
+            I implemented ReST APIs and routes to create a dynamic web server using Java and HTML.
+            I served as a UI deisgner, backend devloper, and project manager to incorporate
+            principles of software development such as SDLC, 12 factor design, agile, and integration testing. 
+          </p>
+        </div>
+          <div class="projects-container">
+            <div class="project-container project-card">
+              <img
+                src="assets/images/calc.png"
+                alt="calc-app"
+                loading="lazy"
+                class="project-pic"
+              />
+              <h3 class="project-title">The Calculator</h3>
+              <p class="project-details">
+                A social media application for peers and co-workers: the Buzz! 
+                In this project, I collaborated with a team of 4 developers to design and deploy this mobile application using Heroku. 
+                I implemented ReST APIs and routes to create a dynamic web server using Java and HTML.
+                I served as a UI deisgner, backend devloper, and project manager to incorporate
+                principles of software development such as SDLC, 12 factor design, agile, and integration testing. 
+              </p>
+            </div>
+        </section>
 
     <!-- Contact section -->
+    <section class="contact" id="contact">
+      <h2>Get In Touch With Me!</h2>
+      <div class="contact-form-container">
+        <div class="contact-form">
+          <form action="https://formspree.io/f/xwkdpdre" method="POST">
+            <div class="form-control">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                id="name"
+                name="sender-name"
+                placeholder="Enter Your Name"
+                class="input-field"
+                required
+              />
+            </div>
+            <div class="form-control">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                name="sender-email"
+                placeholder="Enter Your Email"
+                class="input-field"
+                required
+              />
+            </div>
+            <div class="form-control">
+              <label for="message">Message</label>
+              <textarea
+                id="message"
+                cols="60"
+                rows="10"
+                placeholder="Enter Your Message"
+                name="message"
+                class="input-field"
+                required
+              ></textarea>
+            </div>
+            <input
+              type="submit"
+              value="Submit"
+              id="submit-btn"
+              class="submit-btn"
+            />
+          </form>
+        </div>
+      </div>
+    </section>
 
     <!-- Social accounts - Fixed to the right -->
+    <div class="socials">
+      <a href="#" target="_blank"
+        ><img
+          src="assets/icons/insta.png"
+          alt="Instagram"
+          loading="lazy"
+          class="socicon"
+      /></a>
+      <a href="#" target="_blank"
+        ><img
+          src="assets/icons/LinkedIn.png"
+          alt="Linkedin"
+          loading="lazy"
+          class="socicon"
+      /></a>
+      <a href="#" target="_blank"
+        ><img src="assets/icons/giticon.png" 
+        alt="Github" 
+        class="socicon"
+      /></a>
 
     <!-- Footer section -->
 
