social media links

--- a/index.html
+++ b/index.html
@@ -218,21 +218,21 @@
 
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
-      <a href="#" target="_blank"
+      <a href="https://www.instagram.com/riley.dembo/ " target="_blank"
         ><img
           src="assets/icons/insta.png"
           alt="Instagram"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://www.linkedin.com/in/riley-dembo123/" target="_blank"
         ><img
           src="assets/icons/LinkedIn.png"
           alt="Linkedin"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://github.com/rmd225" target="_blank"
         ><img src="assets/icons/giticon.png" 
         alt="Github" 
         class="socicon"
