project des update

--- a/index.html
+++ b/index.html
@@ -156,11 +156,9 @@
               />
               <h3 class="project-title">The Calculator</h3>
               <p class="project-details">
-                A social media application for peers and co-workers: the Buzz! 
-                In this project, I collaborated with a team of 4 developers to design and deploy this mobile application using Heroku. 
-                I implemented ReST APIs and routes to create a dynamic web server using Java and HTML.
-                I served as a UI deisgner, backend devloper, and project manager to incorporate
-                principles of software development such as SDLC, 12 factor design, agile, and integration testing. 
+                A simple online Calculator site. I created this project using a typical front end 
+                stack, HTML, CSS, and JavaScript. Making this calculator tested my abilites to design a web
+                application while incorporating arithmetic for the calculations. 
               </p>
             </div>
         </section>
