--- a/index.html
+++ b/index.html
@@ -147,11 +147,26 @@
               />
               <h3 class="project-title">The Calculator</h3>
               <p class="project-details">
-                A simple online Calculator site. I created this project using a typical front end 
+                A simple online Calculator site that I orginally made for my mom. I created this project using a typical front end 
                 stack, HTML, CSS, and JavaScript. Making this calculator tested my abilites to design a web
-                application while incorporating arithmetic for the calculations. 
+                application while incorporating arithmetic for the calculations along with data for each state tax rates. 
               </p>
             </div>
+            <div class="projects-container">
+              <div class="project-container project-card">
+                <img
+                  src="assets/images/tic.png"
+                  alt="tictactoe-app"
+                  loading="lazy"
+                  class="project-pic"
+                />
+                <h3 class="project-title">React Tic Tac Toe Game</h3>
+                <p class="project-details">
+                  An interactive tic-tac-toe game with React.
+                  React can change the complexity of app and web designs, such as incorporating concepts like 
+                  components visual states. The game keeps track of whose turn it is, and who eventually wins (or ties)!
+                </p>
+              </div>
         </section>
 
     <!-- Contact section -->
